# Data-Lakehouse-Using-PySpark-Delta-Tables-and-Terraform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml  integration-tests.yml
infrastructure/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/environments/dev/: backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/modules/athena/: main.tf
infrastructure/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infrastructure/modules/glue/: main.tf  outputs.tf  variables.tf
infrastructure/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  variables.tf
infrastructure/modules/step_functions/: main.tf  outputs.tf  variables.tf
scripts/: bootstrap_terraform_backend.sh  generate_fixtures.py  upload_glue_scripts.sh
src/data_quality/: __init__.py  models.py  quarantine.py  rules.py  validator.py
src/glue_jobs/: orders_job.py  products_job.py
src/lambda/: archive_handler.py
tests/: conftest.py
tests/fixtures/: order_items_invalid.json  order_items_sample.json  orders_invalid.json  orders_sample.json  products_invalid.csv  products_sample.csv
tests/integration/: conftest.py  test_orders_pipeline.py  test_products_pipeline.py
tests/unit/: test_config.py  test_delta_utils.py  test_exceptions.py  test_logging_utils.py  test_s3_utils.py  test_schema_definitions.py
(+8 files in other folders)
