[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lakehouse-ecommerce"
version = "1.0.0"
description = "Production-grade AWS Lakehouse using PySpark, Delta Lake, and S3"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.34.0",
    "python-json-logger==2.0.7",
    "openpyxl==3.1.2",
    "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "moto[s3]==5.0.5",
    "ruff==0.4.4",
    "black==24.4.2",
    "pre-commit==3.7.0",
    "coverage==7.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "config"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests with no AWS calls",
    "integration: integration tests using moto mock AWS",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
